website runtime check Is there any schema on chrome storage 🏪

--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -76,6 +76,7 @@ body {
 }
 #homePage .article h3 {
   margin-bottom: 3px;
+  text-transform: capitalize;
 }
 #homePage .article .run {
   color: #86901d;
