--- a/src/client/download/style.css
+++ b/src/client/download/style.css
@@ -150,3 +150,32 @@ body {
 #dom_viewer {
   visibility: hidden;
 }
+#schema_list {
+  padding: 0 3px;
+}
+#schema_list .article {
+  padding: 10px;
+  margin-bottom: 3px;
+  background: #fff;
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12);
+  position: relative;
+  border-radius: 5px;
+}
+#schema_list .article h3 {
+  margin-bottom: 3px;
+  text-transform: capitalize;
+}
+#schema_list .article .run {
+  color: #86901d;
+  position: absolute;
+  right: 3%;
+  top: 25%;
+  border: none;
+  background: #ffeb3b;
+  padding: 5px 11px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: capitalize;
+  cursor: pointer;
+}
