--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -27,7 +27,9 @@ body {
   color: #818c11;
   text-transform: uppercase;
 }
-
+.header-opt {
+  text-align: center;
+}
 .header-opt > input {
   font-family: "Fira Sans Condensed", sans-serif;
   width: 65%;
@@ -91,4 +93,22 @@ body {
   font-weight: 600;
   text-transform: capitalize;
   cursor: pointer;
+}
+.signup-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background: #ffffff;
+}
+.signup-wrapper button {
+  padding: 12px 15px;
+  font-size: 20px;
+  color: #fff;
+  background: #2196f3;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.12);
 }
